--- a/2-threejs/three-d3-starter/three-d3-starter/index.html
+++ b/2-threejs/three-d3-starter/three-d3-starter/index.html
@@ -8,13 +8,14 @@
     <script type="importmap">
     {
         "imports": {
-            "three": "https://unpkg.com/three@v0.152.0/build/three.module.js",
+            "three": "https://unpkg.com/three@v0.154.0/build/three.module.js",
             "three/addons/": "https://unpkg.com/browse/three-orbitcontrols@2.110.3/OrbitControls.js",
-            "three/addons/": "https://unpkg.com/three@v0.152.0/examples/jsm/"
+            "three/addons/": "https://unpkg.com/three@v0.154.0/examples/jsm/"
             "three/addons/": "https://unpkg.com/browse/svg-loader@0.0.2/index.js"
         }
     }
     </script>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.js"></script>
     <link rel="stylesheet" href="styles.css">
